add style for index adaptive

--- a/app/index.html
+++ b/app/index.html
@@ -120,6 +120,7 @@
         <!-- /.bottom-header -->
     </header>
     <!-- /#header -->
+
     <main id="main">
         <div class="inner">
             <div class="container">
@@ -143,7 +144,7 @@
             <div class="container-fluid">
                 <h2 class="title text-center">Let’s Check Out Our Newest Release Products</h2>
                 <div class="newest-products-tabs">
-                    <ul class="nav nav-tabs d-flex justify-content-center" id="myTab" role="tablist">
+                    <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
                         <li class="nav-item">
                           <a class="nav-link active" id="all-tabs" data-toggle="tab" href="#all" role="tab" aria-controls="all" aria-selected="true">All</a>
                         </li>
@@ -166,7 +167,7 @@
                       <div class="tab-content" id="myTabContent">
                         <div class="tab-pane fade show active" id="all" role="tabpanel" aria-labelledby="all-tab">
                             <div class="row">
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -204,7 +205,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="hot-product">
                                             <i class="fas fa-bolt"></i>
@@ -246,7 +247,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -284,7 +285,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -322,7 +323,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -360,7 +361,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -398,7 +399,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="hot-product">
                                             <i class="fas fa-bolt"></i>
@@ -440,7 +441,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6 col-12">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -484,7 +485,7 @@
                         <!-- /.tab-pane -->
                         <div class="tab-pane fade" id="wordpress" role="tabpanel" aria-labelledby="wordpress-tab">
                             <div class="row">
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="hot-product">
                                             <i class="fas fa-bolt"></i>
@@ -526,7 +527,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -564,7 +565,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -608,7 +609,7 @@
                         <!-- /.tab-pane -->
                         <div class="tab-pane fade" id="joomla" role="tabpanel" aria-labelledby="joomla-tab">
                             <div class="row">
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -652,7 +653,7 @@
                         <!-- /.tab-pane -->
                         <div class="tab-pane fade" id="plugins" role="tabpanel" aria-labelledby="plugins-tab">
                             <div class="row">
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <div class="hot-product">
@@ -700,7 +701,7 @@
                         <!-- /.tab-pane -->
                         <div class="tab-pane" id="component" role="tabpanel" aria-labelledby="component-tab">
                             <div class="row">
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -744,7 +745,7 @@
                         <!-- /.tab-pane -->
                         <div class="tab-pane fade" id="psd" role="tabpanel" aria-labelledby="psd-tab">
                             <div class="row">
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -782,7 +783,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-xl-3 -->
-                                <div class="col-xl-3">
+                                <div class="col-xl-3 col-md-6">
                                     <div class="card bg-white">
                                         <div class="card-img">
                                             <a href="#">
@@ -1397,7 +1398,7 @@
             <div class="container">
                 <h2 class="title title-white text-center">Why You Choose Foxtar Market Place?</h2>
                 <div class="row">
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="advantage-item d-flex flex-column align-items-center">
                             <div class="advantage-img">
                                 <img src="img/advantage-img.png" alt="">
@@ -1410,7 +1411,7 @@
                         <!-- /.advantage-item -->
                     </div>
                     <!-- /.col-lg-4 -->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="advantage-item d-flex flex-column align-items-center">
                             <div class="advantage-img">
                                 <img src="img/advantage-img.png" alt="">
@@ -1423,7 +1424,7 @@
                         <!-- /.advantage-item -->
                     </div>
                     <!-- /.col-lg-4 -->
-                    <div class="col-lg-4">
+                    <div class="col-lg-4 col-12">
                         <div class="advantage-item d-flex flex-column align-items-center">
                             <div class="advantage-img">
                                 <img src="img/advantage-img.png" alt="">
@@ -1445,7 +1446,7 @@
         <section class="become-a-author default-section bg-light-grey">
             <div class="container">
                 <img src="img/become-author-img.png" alt="">
-                <div class="become-a-author-content bg-green d-flex">
+                <div class="become-a-author-content bg-green d-flex flex-wrap justify-content-center">
                     <span class="become-author-text">Over <span>20,000</span> Author Are Involved Here!</span>
                     <button class="author-register-btn bg-white">Become A Author</button>
                 </div>
@@ -1458,7 +1459,7 @@
             <div class="container">
                 <h2 class="title text-center">Free Monthly Tutorials To Help You With Your Project</h2>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-12">
                         <div class="tutorials-item bg-light-grey text-center">
                             <div class="tutorials-img">
                                 <img src="img/tutorials-img.jpg" alt="">
@@ -1470,7 +1471,7 @@
                         <!-- /.tutorials-item -->
                     </div>
                     <!-- /.col-md-4 -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-12">
                         <div class="tutorials-item bg-light-grey text-center">
                             <div class="tutorials-img">
                                 <img src="img/tutorials-img.jpg" alt="">
@@ -1482,7 +1483,7 @@
                         <!-- /.tutorials-item -->
                     </div>
                     <!-- /.col-md-4 -->
-                    <div class="col-md-4">
+                    <div class="col-md-4 col-12">
                         <div class="tutorials-item bg-light-grey text-center">
                             <div class="tutorials-img">
                                 <img src="img/tutorials-img.jpg" alt="">
