--- a/app/product-details.html
+++ b/app/product-details.html
@@ -518,7 +518,7 @@
                             </div>
                             <!-- /.more-product -->
                             <div class="row">
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-4 col-md-6 col-12">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -539,7 +539,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-4 col-md-6 col-12">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -560,7 +560,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-4 col-md-6 col-12">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -581,7 +581,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-4 col-md-6 col-12">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -602,7 +602,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-4 col-md-6 col-12">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
@@ -623,7 +623,7 @@
                                     <!-- /.card -->
                                 </div>
                                 <!-- /.col-lg-4 -->
-                                <div class="col-lg-4 col-md-6">
+                                <div class="col-lg-4 col-md-6 col-12">
                                     <div class="card bg-white d-flex">
                                         <div class="card-img">
                                             <a href="#">
