add style for upload product adaptive

--- a/app/upload-products.html
+++ b/app/upload-products.html
@@ -287,7 +287,7 @@
             <!-- /.container -->
         </div>
         <!-- /.inner small-inner -->
-        <div class="content-wrapper">
+        <div class="content-wrapper upload-product-wrap">
             <div class="container">
                 <ul class="breadcrumb">
                     <li>
@@ -301,98 +301,98 @@
                         <h3 class="head-title">Upload Your item</h3>
                         <div class="form-body">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4 col-12">
                                     <label for="category">Select Categories <sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7 col-12">
                                     <select name="category" id="category" class="select-styler">
                                         <option value="">Select</option>  <option value="">Category 1</option>
                                         <option value="">Category 2</option>
                                     </select>
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="product-name">Product Name <sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="text" id="product-name" class="form-control" name="product-name" placeholder="Enter your product name here ...">
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="product-description">Product Description<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <textarea name="product-description" id="product-description" class="form-control"><h1>Type your text here</h1/></textarea>
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="upload-file">Upload Main File<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="file" name="files" id="upload-file" class="input-file-styler" multiple>
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="upload-screenshots">Upload Screenshots<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="file" name="files" id="upload-screenshots" class="input-file-styler">
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="file-type">File Included<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <select name="file-typy" id="file-type" class="select-styler">
                                         <option value="">Select File Type</option>
                                         <option value="">File Type 1</option>
                                         <option value="">File Type 2</option>
                                     </select>
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="file-dimensions">File Dimensions<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="text" id="file-dimensions" class="form-control" name="file-dimensions" placeholder="Enter the item  dimentionss here ...">
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="item-tags">Item Tags<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="text" id="item-tags" class="form-control" name="item-tags" placeholder="Enter Tag Here">
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                         </div>
@@ -400,32 +400,32 @@
                         <h3 class="head-title">Set Your Price (US$)</h3>
                         <div class="form-body">
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="regular-license">Regular License<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="text" id="regular-license" class="form-control" name="regular-license" placeholder="$00.00">
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-3">
+                                <div class="col-lg-3 col-md-4">
                                     <label for="extended-license">Extended License<sup>*</sup></label>
                                 </div>
-                                <!-- /.col-3 -->
-                                <div class="col-8">
+                                <!-- /.col-lg-3 -->
+                                <div class="col-lg-8 col-md-7">
                                     <input type="text" id="extended-license" class="form-control" name="extended-license" placeholder="$00.00">
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                             <div class="row">
-                                <div class="col-8 offset-md-3">
+                                <div class="col-lg-8 offset-lg-3 offset-md-4">
                                     <button class="btn large-btn bg-green">Submit</button>
                                 </div>
-                                <!-- /.col-8 -->
+                                <!-- /.col-lg-8 -->
                             </div>
                             <!-- /.row -->
                         </div>
