--- a/app/index.html
+++ b/app/index.html
@@ -1446,7 +1446,7 @@
         <section class="become-a-author default-section bg-light-grey">
             <div class="container">
                 <img src="img/become-author-img.png" alt="">
-                <div class="become-a-author-content bg-green d-flex flex-wrap justify-content-center">
+                <div class="become-a-author-content bg-green">
                     <span class="become-author-text">Over <span>20,000</span> Author Are Involved Here!</span>
                     <button class="author-register-btn bg-white">Become A Author</button>
                 </div>
