--- a/app/product-details.html
+++ b/app/product-details.html
@@ -8,19 +8,8 @@
 
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <!-- Bootstrap  reboot-->
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <!-- Bootstrap grid -->
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <!-- Slicknav styles -->
-    <link rel="stylesheet" href="css/slicknav.css">
-    <!-- Ion range styles -->
-    <link rel="stylesheet" href="css/ion.rangeSlider.css">
-    <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
-    <!-- Sprite styles -->
-    <link rel="stylesheet" href="css/sprite.css">
     <!-- Custom styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <header id="header">
@@ -316,7 +305,7 @@
                                 <p class="description-text">Bmply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived noning essentially unchanged. </p>
                             </div>
                             <!-- /.product-description -->
-                            <div class="product-links d-flex flex-wrap justify-content-center justify-content-md-between">
+                            <div class="product-links d-flex flex-wrap justify-content-center justify-content-lg-between">
                                 <div class="product-btn-wrap d-flex">
                                     <a href="#" class="btn large-btn bg-red">Live Preview</a>
                                     <a href="#" class="btn large-btn bg-marengo">Screenshots</a>
@@ -877,14 +866,13 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <!-- Ion range slider -->
-    <script src="js/ion.rangeSlider.min.js"></script>
+    <script src="js/lib/ion.rangeSlider.min.js"></script>
     <!-- Slicknav -->
-    <script src="js/jquery.slicknav.min.js"></script>
-    <!-- Aside js -->
-    <script src="js/aside.js"></script>
-    <!-- Init plugins -->
-    <script src="js/init.js"></script>
+    <script src="js/lib/jquery.slicknav.min.js"></script>
+
+    <!-- Scripts -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
