--- a/app/upload-products.html
+++ b/app/upload-products.html
@@ -8,22 +8,8 @@
 
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
-    <!-- Bootstrap  reboot-->
-    <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <!-- Bootstrap grid -->
-    <link rel="stylesheet" href="css/bootstrap-grid.min.css">
-    <!-- Slicknav styles -->
-    <link rel="stylesheet" href="css/slicknav.css">
-    <!-- Ion range styles -->
-    <link rel="stylesheet" href="css/ion.rangeSlider.css">
-    <link rel="stylesheet" href="css/ion.rangeSlider.skinNice.css">
-    <!-- Sprite styles -->
-    <link rel="stylesheet" href="css/sprite.css">
-    <!-- jQuery form styler -->
-    <link rel="stylesheet" href="css/jquery.formstyler.css">
-    <link rel="stylesheet" href="css/jquery.formstyler.theme.css">
     <!-- Custom styles -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <header id="header">
@@ -593,14 +579,15 @@
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <!-- Bootstrap js -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/lib/bootstrap.min.js"></script>
     <!-- Ion range slider -->
-    <script src="js/ion.rangeSlider.min.js"></script>
+    <script src="js/lib/ion.rangeSlider.min.js"></script>
     <!-- Slicknav -->
-    <script src="js/jquery.slicknav.min.js"></script>
+    <script src="js/lib/jquery.slicknav.min.js"></script>
     <!-- jQuery form styler -->
-    <script src="js/jquery.formstyler.min.js"></script>
-    <!-- Init plugins -->
-    <script src="js/init.js"></script>
+    <script src="js/lib/jquery.formstyler.min.js"></script>
+
+    <!-- Script -->
+    <script src="js/scripts.js"></script>
 </body>
 </html>
